created new blog for nginx and unicorn

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,15 +26,15 @@
           <div class="footer">
             <div class="contact">
               <p>
-                Your Name<br />
-                What You Are<br />
-                you@example.com
+                Anbazhagan<br />
+                Rails Developer<br />
+                anbublacky@gmail.com
               </p>
             </div>
             <div class="contact">
               <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
+                <a href="https://github.com/yourusername">github.com/anbublacky</a><br />
+                <a href="https://twitter.com/yourusername">twitter.com/anbublacky</a><br />
               </p>
             </div>
           </div>
